Bug 62618 - Text missing in menu bar of java/awt applications [SNA]
Summary: Text missing in menu bar of java/awt applications [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-21 23:47 UTC by Clemens Eisserer
Modified: 2013-03-27 01:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2013-03-21 23:47:45 UTC
There seems to be a long standing bug in SNA which causes text rendering in java/awt applications to be unreliable.

Steps to reproduce:
- Make sure you have java installed
- Start the "policytool" program
- Play with the menu-bar

I've created a screencast to illustrate the issue: http://youtu.be/1oWPHiT7cYU

Intel 2.21.5 release, Sandy Bridge notebook
This bug only seems to happen when no composition manager is used.
Comment 1 Chris Wilson 2013-03-22 00:02:52 UTC
Looks like fun.
Comment 2 Chris Wilson 2013-03-22 09:58:01 UTC
commit 8d75b2ece1de1c95047c5dc5a569348abd0e6325
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Mar 22 09:51:46 2013 +0000

    sna: Fix computation of clip extents for stippling
    
    The clip extents for the stippled BLT missed applying the drawable
    offset to the lower-right corner, so inevitably every operation ended up
    being clipped.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62618
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Clemens Eisserer 2013-03-27 01:21:23 UTC
As always - thanks a lot :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.